# ephyviewer

./: .coveragerc  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  debug_spectrogam.py  pyproject.toml  requirements-docs.txt  requirements-tests.txt  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  tests.yml
doc/: Makefile  conf.py  examples.rst  index.rst  installation.rst  interface.rst  make.bat  overview.rst  releasenotes.rst
doc/_static/: custom.css
doc/releases/: 1.0.0.rst  1.0.1.rst  1.1.0.rst  1.1.1.rst  1.2.0.rst  1.2.1.rst  1.2.2.rst  1.2.3.rst  1.3.0.rst  1.3.1.rst  1.4.0.rst  1.4.1.rst  1.5.0.rst  1.5.1.rst  1.6.0.rst  1.7.0.rst  1.7.1.rst  1.8.0.rst
ephyviewer/: .gitignore  __init__.py  base.py  dataframeview.py  datasource.py  epochencoder.py  epochviewer.py  eventlist.py  mainviewer.py  myqt.py  navigation.py  scripts.py  spectrogramviewer.py  spiketrainviewer.py  standalone.py  timefreqviewer.py  tools.py  traceimageviewer.py  traceviewer.py  version.py  videoviewer.py
ephyviewer/datasource/: __init__.py  epochs.py  events.py  neosource.py  signals.py  sourcebase.py  spikeinterfacesources.py  spikes.py  video.py
ephyviewer/icons/: __init__.py  icons.qrc  icons_PyQt5.py  icons_PySide2.py  icons_PySide6.py  icons_py2_Qt4.py  icons_py3.py  make_resources.py  make_ressources.py  test_ressources.py
ephyviewer/tests/: test_base.py  test_dataframeview.py  test_datasource.py  test_epochencoder.py  test_epochviewer.py  test_eventlist.py  test_mainviewer.py  test_navigation.py  test_neoviewer.py  test_resources.py  test_spectrogramviewer.py  test_spikeinterfaceviewer.py  test_spiketrainviewer.py  test_standalone.py  test_timefreqviewer.py  test_traceviewer.py  test_videoviewer.py  testing_tools.py
examples/: epoch_encoder.py  event_epoch_viewer.py  mixed_viewer.py  spectrogram_viewer.py  spikes_viewer.py  timefreq_viewer.py  trace_image_viewer_datasource.py  trace_viewer.py  trace_viewer_datasource.py  trace_viewer_with_marker.py  viewers_with_neo_objects.py  viewers_with_spikeinterface_objects.py
